--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-pdf": "^5.0.0",
     "react-scripts": "3.4.3"
   },
